--- a/spring-boot-with-java-introduction/pom.xml
+++ b/spring-boot-with-java-introduction/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>3.0.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
