--- a/spring-boot-with-java-introduction/pom.xml
+++ b/spring-boot-with-java-introduction/pom.xml
@@ -15,7 +15,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
+		<start-class>com.bt.collab.alu.api.webapp.Application</start-class>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
