--- a/spring-boot-with-java-introduction/pom.xml
+++ b/spring-boot-with-java-introduction/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>reactor-core</artifactId>
 			<version>3.0.1.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
