implements content negotiation (query params and headers params).

--- a/spring-boot-with-java-introduction/src/main/resources/application.yml
+++ b/spring-boot-with-java-introduction/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/rest_with_spring_anderson?useTimezone=true&serverTimezone=UTC
     username: root
-    password:
+    password: 1234567
   jpa:
     hibernate:
       ddl-auto: none
